@@ -93,6 +93,7 @@ The following bugs are resolved with this release:
   [21265] x86-64: Use fxsave/xsave/xsavec in _dl_runtime_resolve
   [21269] i386 sigaction sa_restorer handling is wrong
   [21780] posix: Set p{read,write}v2 to return ENOTSUP
+  [21812] getifaddrs: Don't return ifa entries with NULL names
   [21871] x86-64: Use _dl_runtime_resolve_opt only with AVX512F
   [21885] getaddrinfo: Release resolver context on error in gethosts
   [21915] getaddrinfo: incorrect result handling for NSS service modules
